# QtTestTask

./: CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp
Entities/: CMakeLists.txt
Entities/include/: DocumentEntity.h
Entities/src/: DocumentEntity.cpp
Models/: CMakeLists.txt  DocumentEditorModel.cpp  DocumentEditorModel.h  DocumentViewerModel.cpp  DocumentViewerModel.h  constants.h
Views/: DocumentViewer.qml  main.qml
